package com.mservice.momo.msg;
enum MsgType{
    ERR                         = 1;
    APP_SMS_REQUEST             = 2;
    APP_SMS_REPLY               = 3;
    ACK                         = 4;
    MUA123_REQUEST              = 5;
}

message Err{
    enum ResultCode {
        MSG_FORMAT_NOT_CORRECT = 1;
        NUMBER_NOT_VALID       = 2;
        PIN_NOT_VALID          =3;
    };

    optional uint32 rcode = 1;
    optional string rdesc = 2;
}

//for internal only
message SmsRequest{
    optional string rsa_content = 1;
}

message SmsReply{
    optional bool result    = 1;
    optional uint32 rcode   = 2;
}


